# anthill

./: .gitignore  CLAUDE.md  transitions.anthill
rustland/anthill-cli/: Cargo.toml  build.rs
rustland/anthill-cli/src/: check.rs  main.rs  prove.rs  run.rs  stdlib_embedded.rs  witness.rs
rustland/anthill-cli/tests/: load_cmd_test.rs  prove_body_derived_test.rs  prove_cache_test.rs  prove_derivation_test.rs  prove_hint_test.rs  prove_induction_test.rs  prove_outcome_test.rs  prove_ranking_test.rs  prove_structured_test.rs  prove_tactic_test.rs  prove_topo_test.rs  prove_trust_test.rs  prove_using_test.rs  query_cmd_test.rs  run_cmd_test.rs  wi416_overflow_test.rs  wi564_check_discharge_test.rs  wi767_query_resolve_default_test.rs  wi781_policy_dispatch_test.rs
rustland/anthill-core/: Cargo.toml
rustland/anthill-core/examples/: gen_store.rs
rustland/anthill-core/src/: fs_util.rs  intern.rs  lib.rs  span.rs
rustland/anthill-core/tests/: algebra_spec_test.rs  algebra_tests.rs  builtin_tests.rs  classic_mini_test.rs  cli_parse_test.rs  codegen_test.rs  console_stdlib_test.rs  equational_attr_test.rs  eval_m1_test.rs  eval_m2_test.rs  eval_m3_test.rs  eval_m4_test.rs  eval_m5_modify_test.rs  eval_m5_test.rs  eval_q3_test.rs  eval_q4_test.rs  eval_test.rs  eval_tests.rs  fact_substitution_test.rs  forall_impl_resolve_test.rs  github_todo_test.rs  guard_trigger_test.rs  incremental_load_test.rs  induction_axiom_witness_test.rs  induction_rule_test.rs  induction_tests.rs  logic_sorts_test.rs  map_builtins_test.rs  nested_implication_test.rs  numeric_induction_test.rs  operation_equation_test.rs  parse_test.rs  parse_tests.rs  persistence_builtins_test.rs  persistence_test.rs  proof_load_test.rs  push_choice_test.rs  resolve_tests.rs  ring_polynom_test.rs  route_dispatch_test.rs  (+42 more)
rustland/anthill-cpp-gen/: Cargo.toml
rustland/anthill-cpp-gen/anthill/: int.anthill  int64.anthill
rustland/anthill-cpp-gen/src/: anthill_runtime.hpp  lib.rs
rustland/anthill-cpp-gen/tests/: carrier_include_test.rs  carrier_test.rs  conversion_test.rs  diag_generated.rs  diag_lf1.rs  diag_match_bind.rs  diag_phase_b.rs  diag_phase_c.rs  diag_phase_d.rs  diag_phase_f.rs  effect_gate_test.rs  entity_struct_test.rs  expr_body_b_test.rs  expr_body_c_test.rs  expr_body_d_test.rs  expr_body_e_test.rs  expr_body_f_test.rs  expr_body_test.rs  generated_facts_test.rs  generic_sort_test.rs  generic_sum_test.rs  header_compile_test.rs  higher_kinded_arrow_test.rs  indexed_seq_test.rs  integration.rs  keyed_overlay_test.rs  lf1_test.rs  match_binding_test.rs  math_vocab_test.rs  namespace_traits_test.rs  option_test.rs  parameterized_test.rs  runtime_header_test.rs  traits_struct_test.rs  type_mapping_query_test.rs  unsupported_test.rs  variant_test.rs  wi533_const_test.rs  wi536_const_ref_test.rs  wi760_realization_rule_test.rs  (+3 more)
rustland/anthill-rust-gen/: Cargo.toml
rustland/anthill-rust-gen/src/: bundle.rs  lib.rs
rustland/anthill-rust-gen/tests/: bundle.rs  integration.rs
rustland/anthill-smt-gen/: Cargo.toml
rustland/anthill-smt-gen/src/: lib.rs  outcome.rs  policy.rs  tactic_emit.rs
rustland/anthill-smt-gen/tests/: assumptions_test.rs  blob_test.rs  cache_key_test.rs  comm_delay_test.rs  cross_namespace_inline_test.rs  inductive_test.rs  integration.rs  lf1_real_spec_test.rs  lift_implication_test.rs  policy_test.rs  qfnra_field_access_test.rs  state_hash_test.rs  step_distance_test.rs  wi680_ite_lowering_test.rs  wi681_desired_position_test.rs  wi686_scalar_param_in_constructor_test.rs  wi687_match_headed_test.rs  wi772_bodied_entity_fact_test.rs
rustland/anthill-stl/: Cargo.toml  build.rs
rustland/anthill-stl/anthill/: bigint.anthill  bool.anthill  float.anthill  geometry.anthill  int.anthill  int64.anthill  string.anthill
rustland/anthill-stl/src/: lib.rs  runner.rs  stdlib.rs
rustland/anthill-stl/tests/: stdlib_drift_test.rs
rustland/anthill-todo/: Cargo.toml  workitems.anthill
rustland/anthill-todo/anthill/: main.anthill  rules.anthill  store.anthill  version.anthill
rustland/anthill-todo/src/: anthill_bundle.rs  main.rs  stdlib_embedded.rs
rustland/anthill-todo/tests/: cmd_add_test.rs  cmd_bundled_domain_test.rs  cmd_claim_test.rs  cmd_claim_unbalanced_paren_test.rs  cmd_default_parity_test.rs  cmd_feedback_test.rs  cmd_insert_bundle_test.rs  cmd_list_tagged_bundle_test.rs  cmd_list_unblocked_test.rs  cmd_preopen_promote_test.rs  cmd_shim_test.rs  cmd_status_transitions_test.rs  cmd_tag_bundle_test.rs  cmd_tag_test.rs  cmd_unclaim_test.rs  cmd_update_status_test.rs  cmd_update_test.rs  cmd_version_stamp_test.rs  cmd_version_test.rs  wi203_store_test.rs  wi711_preopened_dep_blocks_test.rs  wi717_omitted_optional_claimable_test.rs  wi748_init_honors_dir_test.rs
tree-sitter-anthill/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.rs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-anthill/test/corpus/: arrow_types.txt  bounded_quantification.txt  collection_literals.txt  const.txt  doc_comments.txt  effect_row_type_arg.txt  enum.txt  error_recovery.txt  expressions.txt  field_access.txt  guarded_effect.txt  ho_predicate.txt  kernel_domain.txt  kernel_namespace.txt  op_type_params.txt  (+9 more)
(+806 files in other folders)
