[package]
name = "anthill-cli"
version = "0.1.0"
edition = "2021"
description = "Anthill CLI: validate, status, verify, decompose"

[[bin]]
name = "anthill"
path = "src/main.rs"

[dependencies]
anthill-core = { path = "../anthill-core" }
anthill-stl = { path = "../anthill-stl" }
anthill-cpp-gen = { path = "../anthill-cpp-gen" }
anthill-rust-gen = { path = "../anthill-rust-gen" }
anthill-smt-gen = { path = "../anthill-smt-gen" }
clap = { version = "4", features = ["derive"] }
smallvec = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
