[package]
name = "anthill-core"
version = "0.1.0"
edition = "2021"
description = "Anthill kernel language: terms, parser, KB, stage0"

[dependencies]
smallvec = { version = "1", features = ["const_generics"] }
ordered-float = "4"
num-bigint = "0.4"
indexmap = "2"
tree-sitter = "0.25"
tree-sitter-anthill = { path = "../../tree-sitter-anthill" }
serde = "1"
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "=3.14.0"
