[package]
name = "anthill-rust-gen"
version = "0.1.0"
edition = "2021"
description = "Generate Rust code from anthill specifications (KB-driven)."
autotests = false

[dependencies]
anthill-core = { path = "../anthill-core" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"
