[package]
name = "anthill-smt-gen"
version = "0.1.0"
edition = "2021"
description = "Emit SMT-LIB 2.6 from anthill specifications (KB-driven, Z3 / CVC5 target)."
autotests = false

[dependencies]
anthill-core = { path = "../anthill-core" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
smallvec = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "cache_key"
path = "tests/cache_key_test.rs"

[[test]]
name = "state_hash"
path = "tests/state_hash_test.rs"

[[test]]
name = "blob"
path = "tests/blob_test.rs"

[[test]]
name = "policy"
path = "tests/policy_test.rs"
